added eligibility images and more localization

--- a/VACC1/es.lproj/Localizable.strings
+++ b/VACC1/es.lproj/Localizable.strings
@@ -10,3 +10,5 @@
 "Updates" = "Actualizaciones";
 "Locations and Appointments" ="Ubicaciones y Citas";
 "Vaccinated Opportunities" = "Oportunidades Vacunadas";
+"Eligibity and Vaccine Information" = "Información de Elegibilidad y Ubicaciones";
+"Vaccine Information" = "información sobre vacunas";
